--- a/openshift/templates/app_offline.json
+++ b/openshift/templates/app_offline.json
@@ -2,11 +2,11 @@
   "kind": "Template",
   "apiVersion": "template.openshift.io/v1",
   "metadata": {
-    "name": "nginx-example",
+    "name": "app_offline",
     "annotations": {
       "openshift.io/display-name": "Nginx HTTP server and a reverse proxy",
-      "description": "An example Nginx HTTP server and a reverse proxy (nginx) application that serves static content. For more information about using this template, including OpenShift considerations, see https://github.com/sclorg/nginx-ex/blob/master/README.md.",
-      "tags": "quickstart,nginx",
+      "description": "An example Nginx HTTP server and a reverse proxy (nginx) application that serves static content.",
+      "tags": "app_offline",
       "iconClass": "icon-nginx",
       "openshift.io/long-description": "This template defines resources needed to develop a static application served by Nginx HTTP server and a reverse proxy (nginx), including a build configuration and application deployment configuration.",
       "openshift.io/provider-display-name": "Red Hat, Inc.",
@@ -14,7 +14,7 @@
       "openshift.io/support-url": "https://access.redhat.com"
     }
   },
-  "message": "The following service(s) have been created in your project: ${NAME}.\n\nFor more information about using this template, including OpenShift considerations, see https://github.com/sclorg/nginx-ex/blob/master/README.md.",
+  "message": "The following service(s) have been created in your project: ${NAME}.",
   "labels": {
     "template": "${NAME}",
     "app": "${NAME}"
@@ -32,7 +32,7 @@
       "spec": {
         "ports": [
           {
-            "name": "web",
+            "name": "8080-tcp",
             "port": 8080,
             "targetPort": 8080
           }
@@ -115,18 +115,6 @@
           {
             "type": "ConfigChange"
           },
-          {
-            "type": "GitHub",
-            "github": {
-              "secret": "${GITHUB_WEBHOOK_SECRET}"
-            }
-          },
-          {
-            "type": "Generic",
-            "generic": {
-              "secret": "${GENERIC_WEBHOOK_SECRET}"
-            }
-          }
         ]
       }
     },
@@ -165,7 +153,7 @@
           "spec": {
             "containers": [
               {
-                "name": "nginx-example",
+                "name": "app_offline",
                 "image": " ",
                 "ports": [
                   {
@@ -208,7 +196,7 @@
       "displayName": "Name",
       "description": "The name assigned to all of the frontend objects defined in this template.",
       "required": true,
-      "value": "nginx-offline"
+      "value": "app-offline"
     },
     {
       "name": "NAMESPACE",
@@ -229,7 +217,7 @@
       "displayName": "Memory Limit",
       "description": "Maximum amount of memory the container can use.",
       "required": true,
-      "value": "512Mi"
+      "value": "256Mi"
     },
     {
       "name": "SOURCE_REPOSITORY_URL",
@@ -254,19 +242,5 @@
       "description": "The exposed hostname that will route to the nginx service, if left blank a value will be defaulted.",
       "value": ""
     },
-    {
-      "name": "GITHUB_WEBHOOK_SECRET",
-      "displayName": "GitHub Webhook Secret",
-      "description": "Github trigger secret.  A difficult to guess string encoded as part of the webhook URL.  Not encrypted.",
-      "generate": "expression",
-      "from": "[a-zA-Z0-9]{40}"
-    },
-    {
-      "name": "GENERIC_WEBHOOK_SECRET",
-      "displayName": "Generic Webhook Secret",
-      "description": "A secret string used to configure the Generic webhook.",
-      "generate": "expression",
-      "from": "[a-zA-Z0-9]{40}"
-    }
   ]
 }
